--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,46 +6,134 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/input"
-        android:inputType="number"
-        android:layout_margin="20dp"
-        android:layout_width="280dp"
-        android:layout_height="50dp"/>
-
-    <EditText
-        android:id="@+id/input2"
-        android:inputType="number"
-        android:layout_below="@id/input"
-        android:layout_margin="20dp"
-        android:layout_width="280dp"
-        android:layout_height="50dp"/>
-
-
-    <Button
-        android:id="@+id/button_add"
-        android:text="+"
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/input"
+    <RelativeLayout
+        android:layout_marginTop="250dp"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_below="@id/button_add"
-        android:id="@+id/button_sub"
-        android:text="-"
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/show"
+            android:layout_width="260dp"
+            android:layout_height="50dp"/>
+        <LinearLayout
+            android:id="@+id/row1"
+            android:layout_below="@id/show"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/num1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="1"></Button>
+            <Button
+                android:id="@+id/num2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="2"></Button>
+
+            <Button
+                android:id="@+id/num3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="3"></Button>
+            <Button
+                android:layout_marginLeft="10dp"
+                android:id="@+id/tool1"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="+"></Button>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_below="@id/row1"
+            android:id="@+id/row2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/num4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="4"></Button>
+            <Button
+                android:id="@+id/num5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="5"></Button>
+
+            <Button
+                android:id="@+id/num6"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="6"></Button>
+            <Button
+                android:layout_marginLeft="10dp"
+                android:id="@+id/tool2"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="-"></Button>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_below="@id/row2"
+            android:id="@+id/row3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/num7"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="7"></Button>
+            <Button
+                android:id="@+id/num8"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="8"></Button>
+
+            <Button
+                android:id="@+id/num9"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="9"></Button>
+            <Button
+                android:layout_marginLeft="10dp"
+                android:id="@+id/tool3"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="*"></Button>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_below="@id/row3"
+            android:id="@+id/row4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/cancel"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="C"></Button>
+            <Button
+                android:id="@+id/num0"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="0"></Button>
+
+            <Button
+                android:id="@+id/getResult"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="="></Button>
+            <Button
+                android:layout_marginLeft="10dp"
+                android:id="@+id/tool4"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="/"></Button>
+        </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/textview"
-        android:textSize="40dp"
-        android:layout_margin="20dp"
-        android:layout_below="@id/input2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    </RelativeLayout>
 
 </RelativeLayout>
